src/negative_test_cases/Testcases/no_return_type_and_main_method.stl
sum(){
boolean a = 5 < 6;
}
